app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app-ingress
  namespace: production
  annotations:
    # Cambiamos de nuevo a '/' para limpiar el prefijo antes de enviarlo al pod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. API de Flask (Escucha en la raíz)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-app-service
            port:
              number: 8080

      # 2. pgAdmin (Escucha en /pgadmin)
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
